Fixed aligning issue for searchbar and title

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -36,6 +36,7 @@ body {
 
 .searchBarDiv form {
     width: 60%;
+    display: inline-block;
 }
 
 .searchBar {
@@ -88,4 +89,5 @@ body {
     text-align: center;
     background-color: #ea3232;
     color: #ffffff;
+    width: 100%;
 }
